Added validation for checkboxes to allow or disallow the submit action as well as modifying the css of the error messages.

--- a/css/style.css
+++ b/css/style.css
@@ -149,10 +149,10 @@ button:hover {
   clear: both;
 }
 
-.warning {
-	font-size: .45em;
-	font-color: red;
-	visibility: hidden;
+label.error {
+	color: red;
+	font-size: .7em;
+	margin-top: -10px;
 }
 
 /* ================================= 
